// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index check connection - app auth missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid value for authentication.app_cfg.auth",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app client invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app client configuration: client_id and client_secret are required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app client valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app installation invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app installation configuration: installation_id is required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app installation valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app configuration: app_id, private_key and app_cfg are required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - authentication missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid value for authentication.auth",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid token configuration: Personal access token is required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index streams - copilot seats (empty) 1`] = `
[
  {
    "empty": true,
    "org": "faros-ai",
  },
]
`;

exports[`index streams - copilot seats 1`] = `
[
  {
    "assignee": {
      "avatar_url": "https://github.com/images/error/octocat_happy.gif",
      "events_url": "https://api.github.com/users/octocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/octocat/followers",
      "following_url": "https://api.github.com/users/octocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/octocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/octocat",
      "id": 1,
      "login": "octocat",
      "node_id": "MDQ6VXNlcjE=",
      "organizations_url": "https://api.github.com/users/octocat/orgs",
      "received_events_url": "https://api.github.com/users/octocat/received_events",
      "repos_url": "https://api.github.com/users/octocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/octocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/octocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/octocat",
    },
    "assigning_team": {
      "description": "A great team.",
      "html_url": "https://github.com/orgs/github/teams/justice-league",
      "id": 1,
      "members_url": "https://api.github.com/teams/1/members{/member}",
      "name": "Justice League",
      "node_id": "MDQ6VGVhbTE=",
      "notification_setting": "notifications_enabled",
      "parent": null,
      "permission": "admin",
      "privacy": "closed",
      "repositories_url": "https://api.github.com/teams/1/repos",
      "slug": "justice-league",
      "url": "https://api.github.com/teams/1",
    },
    "created_at": "2021-08-03T18:00:00-06:00",
    "last_activity_at": "2021-10-14T00:53:32-06:00",
    "last_activity_editor": "vscode/1.77.3/copilot/1.86.82",
    "org": "faros-ai",
    "pending_cancellation_date": null,
    "updated_at": "2021-09-23T15:00:00-06:00",
    "user": "octocat",
  },
  {
    "assignee": {
      "avatar_url": "https://github.com/images/error/octokitten_happy.gif",
      "events_url": "https://api.github.com/users/octokitten/events{/privacy}",
      "followers_url": "https://api.github.com/users/octokitten/followers",
      "following_url": "https://api.github.com/users/octokitten/following{/other_user}",
      "gists_url": "https://api.github.com/users/octokitten/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/octokitten",
      "id": 1,
      "login": "octokitten",
      "node_id": "MDQ76VNlcjE=",
      "organizations_url": "https://api.github.com/users/octokitten/orgs",
      "received_events_url": "https://api.github.com/users/octokitten/received_events",
      "repos_url": "https://api.github.com/users/octokitten/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/octokitten/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/octokitten/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/octokitten",
    },
    "created_at": "2021-09-23T18:00:00-06:00",
    "last_activity_at": "2021-10-13T00:53:32-06:00",
    "last_activity_editor": "vscode/1.77.3/copilot/1.86.82",
    "org": "faros-ai",
    "pending_cancellation_date": "2021-11-01",
    "updated_at": "2021-09-23T15:00:00-06:00",
    "user": "octokitten",
  },
]
`;

exports[`index streams - copilot usage 1`] = `
[
  {
    "breakdown": [
      {
        "acceptances_count": 250,
        "active_users": 5,
        "editor": "vscode",
        "language": "python",
        "lines_accepted": 700,
        "lines_suggested": 900,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 200,
        "active_users": 2,
        "editor": "jetbrains",
        "language": "python",
        "lines_accepted": 300,
        "lines_suggested": 400,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 350,
        "active_users": 3,
        "editor": "vscode",
        "language": "ruby",
        "lines_accepted": 200,
        "lines_suggested": 500,
        "suggestions_count": 400,
      },
    ],
    "day": "2023-10-15",
    "org": "faros-ai",
    "total_acceptances_count": 800,
    "total_active_chat_users": 4,
    "total_active_users": 10,
    "total_chat_acceptances": 32,
    "total_chat_turns": 200,
    "total_lines_accepted": 1200,
    "total_lines_suggested": 1800,
    "total_suggestions_count": 1000,
  },
  {
    "breakdown": [
      {
        "acceptances_count": 200,
        "active_users": 2,
        "editor": "vscode",
        "language": "python",
        "lines_accepted": 300,
        "lines_suggested": 600,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 150,
        "active_users": 6,
        "editor": "jetbrains",
        "language": "python",
        "lines_accepted": 250,
        "lines_suggested": 300,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 150,
        "active_users": 3,
        "editor": "vscode",
        "language": "ruby",
        "lines_accepted": 150,
        "lines_suggested": 200,
        "suggestions_count": 200,
      },
    ],
    "day": "2023-10-16",
    "org": "faros-ai",
    "total_acceptances_count": 600,
    "total_active_chat_users": 8,
    "total_active_users": 12,
    "total_chat_acceptances": 57,
    "total_chat_turns": 426,
    "total_lines_accepted": 700,
    "total_lines_suggested": 1100,
    "total_suggestions_count": 800,
  },
]
`;
